// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GameForm > create form matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_root_4fb064"
      >
        <h3
          class="_header_4fb064"
        >
          Create Game
        </h3>
        <form
          data-testid="gameForm"
          style="--button-background-color: #00a323; --button-text-color: #fff; --button-hover-color: #00921f; --button-border-color: #00821c;"
        >
          <fieldset
            class="_fieldset_4fb064"
          >
            <label
              class="_label_4fb064"
            >
              Name
              <input
                class="_input_4fb064"
                name="name"
                pattern="^\\s*[A-Za-z0-9 \\-',]*\\s*$"
                placeholder="Name"
                title="Name can contain only alphanumeric characters, spaces, commas, hyphens, and apostrophes"
                type="text"
              />
            </label>
          </fieldset>
          <fieldset
            class="_fieldset_4fb064"
          >
            <label
              class="_label_4fb064"
            >
              Description
              <input
                class="_input_4fb064"
                name="description"
                placeholder="Description"
              />
            </label>
          </fieldset>
          <button
            class="_submit_4fb064"
            data-testid="gameFormSubmit"
            type="submit"
          >
            Create Game
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_root_4fb064"
    >
      <h3
        class="_header_4fb064"
      >
        Create Game
      </h3>
      <form
        data-testid="gameForm"
        style="--button-background-color: #00a323; --button-text-color: #fff; --button-hover-color: #00921f; --button-border-color: #00821c;"
      >
        <fieldset
          class="_fieldset_4fb064"
        >
          <label
            class="_label_4fb064"
          >
            Name
            <input
              class="_input_4fb064"
              name="name"
              pattern="^\\s*[A-Za-z0-9 \\-',]*\\s*$"
              placeholder="Name"
              title="Name can contain only alphanumeric characters, spaces, commas, hyphens, and apostrophes"
              type="text"
            />
          </label>
        </fieldset>
        <fieldset
          class="_fieldset_4fb064"
        >
          <label
            class="_label_4fb064"
          >
            Description
            <input
              class="_input_4fb064"
              name="description"
              placeholder="Description"
            />
          </label>
        </fieldset>
        <button
          class="_submit_4fb064"
          data-testid="gameFormSubmit"
          type="submit"
        >
          Create Game
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GameForm > edit form matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_root_4fb064"
      >
        <h3
          class="_header_4fb064"
        >
          Update Game
        </h3>
        <form
          data-testid="gameForm"
          style="--button-background-color: #00a323; --button-text-color: #fff; --button-hover-color: #00921f; --button-border-color: #00821c;"
        >
          <fieldset
            class="_fieldset_4fb064"
          >
            <label
              class="_label_4fb064"
            >
              Name
              <input
                class="_input_4fb064"
                name="name"
                pattern="^\\s*[A-Za-z0-9 \\-',]*\\s*$"
                placeholder="Name"
                title="Name can contain only alphanumeric characters, spaces, commas, hyphens, and apostrophes"
                type="text"
                value="My Game 1"
              />
            </label>
          </fieldset>
          <fieldset
            class="_fieldset_4fb064"
          >
            <label
              class="_label_4fb064"
            >
              Description
              <input
                class="_input_4fb064"
                name="description"
                placeholder="Description"
                value="This game has a description"
              />
            </label>
          </fieldset>
          <button
            class="_submit_4fb064"
            data-testid="gameFormSubmit"
            type="submit"
          >
            Update Game
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_root_4fb064"
    >
      <h3
        class="_header_4fb064"
      >
        Update Game
      </h3>
      <form
        data-testid="gameForm"
        style="--button-background-color: #00a323; --button-text-color: #fff; --button-hover-color: #00921f; --button-border-color: #00821c;"
      >
        <fieldset
          class="_fieldset_4fb064"
        >
          <label
            class="_label_4fb064"
          >
            Name
            <input
              class="_input_4fb064"
              name="name"
              pattern="^\\s*[A-Za-z0-9 \\-',]*\\s*$"
              placeholder="Name"
              title="Name can contain only alphanumeric characters, spaces, commas, hyphens, and apostrophes"
              type="text"
              value="My Game 1"
            />
          </label>
        </fieldset>
        <fieldset
          class="_fieldset_4fb064"
        >
          <label
            class="_label_4fb064"
          >
            Description
            <input
              class="_input_4fb064"
              name="description"
              placeholder="Description"
              value="This game has a description"
            />
          </label>
        </fieldset>
        <button
          class="_submit_4fb064"
          data-testid="gameFormSubmit"
          type="submit"
        >
          Update Game
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
